Improvements to file suggested by intelliJ